kubernetes-lab/mysql/create-mysql-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mysql
  labels:
    project: mysql
