kubernetes-lab/mysql/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: mysql
  name: mysql-pod-service
  labels:
    app: mysql
spec:
  selector:
    role: mysql
  ports:
    - port: 3306
      targetPort: 3306
