kubernetes-lab/mysql/mysql-namespace-deny-all-incoming.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-namespace-deny-all-incoming
  namespace: mysql
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
